--- a/room_select.html
+++ b/room_select.html
@@ -292,7 +292,7 @@
                     >
                       <div className="room-info">
                         <div className="room-header">
-                          <span className="room-number">{room.name || room.roomName || `部屋 ${room.id || 'N/A'}`}</span>
+                          <span className="room-number">{room.name || room.roomName || '部屋名未設定'}</span>
                         </div>
                       </div>
                       <svg className="room-arrow" fill="currentColor" viewBox="0 0 20 20">
