--- a/meter_reading.html
+++ b/meter_reading.html
@@ -770,13 +770,36 @@
               )}
             </div>
             
-            {(!loading && Array.isArray(meterReadings)) && (
+            {(!loading && !error && (Array.isArray(meterReadings) && meterReadings.length > 0)) && (
               <div className="fab-container" style={{ position: 'fixed', bottom: '20px', right: '20px', zIndex: 1001}}>
                 <button
                   className="fab-button mantine-button variant-filled"
                   onClick={handleUpdateReadings}
                   disabled={updating}
                   title="指示数を更新"
+                  style={{
+                      width: '72px',
+                      height: '72px',
+                      borderRadius: '50%', 
+                      fontSize: '28px',
+                      boxShadow: '0 4px 12px rgba(0,0,0,0.2)',
+                      display: 'flex',
+                      alignItems: 'center',
+                      justifyContent: 'center'
+                  }}
+                >
+                  {updating ? <div className="mantine-loader" style={{width: '32px', height: '32px', borderTopColor: 'white'}}></div> : '💾'}
+                </button>
+              </div>
+            )}
+            
+            {(!loading && !error && (!Array.isArray(meterReadings) || meterReadings.length === 0)) && (
+              <div className="fab-container" style={{ position: 'fixed', bottom: '20px', right: '20px', zIndex: 1001}}>
+                <button
+                  className="fab-button mantine-button variant-filled"
+                  onClick={handleUpdateReadings}
+                  disabled={updating}
+                  title="初回検針データを保存"
                   style={{
                       width: '72px',
                       height: '72px',
