--- a/test_gas_connection.html
+++ b/test_gas_connection.html
@@ -48,9 +48,8 @@
         <div id="inspection-result" class="result"></div>
     </div>
 
-    <script>        // GAS Web App URL (property_select.htmlから取得、またはテスト用URL)
-        const gasWebAppUrl = sessionStorage.getItem('gasWebAppUrl') || 
-                       'https://script.google.com/macros/s/AKfycbxlled-ot17rnp-yWMbKJqa8biDFV2XTFtgaWoQOhC7947dpYgn5qA0uSH7e9uKlgMcYA/exec';
+    <script>        // GAS Web App URL (property_select.htmlから取得、またはテスト用URL)        const gasWebAppUrl = sessionStorage.getItem('gasWebAppUrl') || 
+                       'https://script.google.com/macros/s/AKfycby9heEnCsXcNa8MLaRAtehu2lL_rPl2P6-yY7PKy81YUkBEvQa2ZywqVWtMpu3RNZYnmg/exec';
         
         console.log('使用するGAS URL:', gasWebAppUrl);
 
