--- a/property_select.html
+++ b/property_select.html
@@ -23,10 +23,9 @@
     const App = () => {
       const [properties, setProperties] = React.useState([]);
       const [searchTerm, setSearchTerm] = React.useState('');
-      const [loading, setLoading] = React.useState(true);
-      const [error, setError] = React.useState(null);      const [woffInitialized, setWoffInitialized] = React.useState(false);
+      const [loading, setLoading] = React.useState(true);      const [error, setError] = React.useState(null);      const [woffInitialized, setWoffInitialized] = React.useState(false);
 
-      const gasWebAppUrl = 'https://script.google.com/macros/s/AKfycby9heEnCsXcNa8MLaRAtehu2lL_rPl2P6-yY7PKy81YUkBEvQa2ZywqVWtMpu3RNZYnmg/exec';
+      const gasWebAppUrl = 'https://script.google.com/macros/s/AKfycbwkVcdp8FYShCzYEkzHtQRHu3g8VDhBftqQGSO7NCNKrV-bzFJU4l9k6XQVoc1MJ_MweA/exec';
       const woffIdForWorks = "Mtmj4rddmxBddYCPD0G81A";
 
       React.useEffect(() => {
