--- a/v5_cors_test_tool.html
+++ b/v5_cors_test_tool.html
@@ -72,9 +72,8 @@
         </div>
 
         <div class="section">
-            <h3>🔗 Google Apps Script URL</h3>
-            <input type="url" id="gasUrl" placeholder="https://script.google.com/macros/s/YOUR_DEPLOYMENT_ID/exec" 
-                   value="https://script.google.com/macros/s/AKfycby9heEnCsXcNa8MLaRAtehu2lL_rPl2P6-yY7PKy81YUkBEvQa2ZywqVWtMpu3RNZYnmg/exec">
+            <h3>🔗 Google Apps Script URL</h3>            <input type="url" id="gasUrl" placeholder="https://script.google.com/macros/s/YOUR_DEPLOYMENT_ID/exec" 
+                   value="https://script.google.com/macros/s/AKfycbwkVcdp8FYShCzYEkzHtQRHu3g8VDhBftqQGSO7NCNKrV-bzFJU4l9k6XQVoc1MJ_MweA/exec">
             <small>注意: 新しいデプロイのURLに更新してください</small>
         </div>
 
