--- a/property_select.html
+++ b/property_select.html
@@ -192,6 +192,11 @@
             });
           } else {
             console.log(`[ReactApp] Redirecting to: ${targetUrl}`);
+            // 画面遷移前に現在の画面を非表示にする
+            const rootElement = document.getElementById('root');
+            if (rootElement) {
+              rootElement.style.display = 'none';
+            }
             window.location.href = targetUrl;
           }
         } catch (error) {
