--- a/meter_reading.html
+++ b/meter_reading.html
@@ -198,12 +198,54 @@
       };
 
       const handleBackButton = () => {
-        // 画面遷移前に現在の画面を非表示にする
-        const rootElement = document.getElementById('root');
-        if (rootElement) {
-          rootElement.style.display = 'none';
-        }
-        window.location.href = 'room_select.html';
+        // ローディング画面を表示
+        showLoadingScreen();
+        // 短い遅延の後に画面遷移
+        setTimeout(() => {
+          window.location.href = 'room_select.html';
+        }, 300);
+      };
+
+      const showLoadingScreen = () => {
+        // ローディング画面のHTML
+        const loadingHTML = `
+          <div id="loading-overlay" style="
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: #ffffff;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            z-index: 50000;
+          ">
+            <div style="
+              width: 40px;
+              height: 40px;
+              border: 4px solid #f3f3f3;
+              border-top: 4px solid #3498db;
+              border-radius: 50%;
+              animation: spin 1s linear infinite;
+            "></div>
+            <p style="
+              margin-top: 16px;
+              color: #666;
+              font-size: 14px;
+            ">画面を切り替えています...</p>
+            <style>
+              @keyframes spin {
+                0% { transform: rotate(0deg); }
+                100% { transform: rotate(360deg); }
+              }
+            </style>
+          </div>
+        `;
+        
+        // ローディング画面をbodyに追加
+        document.body.insertAdjacentHTML('beforeend', loadingHTML);
       };
 
       const formatDate = (dateValue) => {
