--- a/meter_reading.html
+++ b/meter_reading.html
@@ -83,6 +83,11 @@
         initializeWoff();
       }, []);
 
+      // コンポーネントマウント時にスクロール位置をリセット
+      React.useEffect(() => {
+        window.scrollTo(0, 0);
+      }, []);
+
       React.useEffect(() => {
         if (!woffInitialized) return;
 
@@ -202,10 +207,9 @@
       const handleBackButton = () => {
         setIsNavigating(true);
         setNavigationMessage('画面を切り替えています...');
-        // 短い遅延の後に画面遷移
-        setTimeout(() => {
-          window.location.href = 'room_select.html';
-        }, 300);
+        // スクロール位置をリセットしてから遷移
+        window.scrollTo(0, 0);
+        window.location.href = 'room_select.html';
       };
 
       // LoadingOverlayコンポーネント
