--- a/room_select.html
+++ b/room_select.html
@@ -54,6 +54,11 @@
         initializeWoff();
       }, [woffIdForWorks]);
 
+      // コンポーネントマウント時にスクロール位置をリセット
+      React.useEffect(() => {
+        window.scrollTo(0, 0);
+      }, []);
+
       React.useEffect(() => {
         if (!woffInitialized) return;
 
@@ -105,10 +110,9 @@
       const handleBackToPropertySelect = () => {
         setIsNavigating(true);
         setNavigationMessage('画面を切り替えています...');
-        // 短い遅延の後に画面遷移
-        setTimeout(() => {
-          window.location.href = 'property_select.html';
-        }, 300);
+        // スクロール位置をリセットしてから遷移
+        window.scrollTo(0, 0);
+        window.location.href = 'property_select.html';
       };
 
       // LoadingOverlayコンポーネント
@@ -162,6 +166,9 @@
 
         setIsNavigating(true);
         setNavigationMessage('検針画面に移動しています...');
+        
+        // スクロール位置をリセットしてから遷移
+        window.scrollTo(0, 0);
 
         // meter_reading.html に物件ID、物件名、部屋ID、部屋名を渡して画面遷移
         const params = new URLSearchParams();
@@ -180,10 +187,7 @@
           });
         } else {
           console.log(`[room_select] Redirecting to: ${targetUrl}`);
-          // 短い遅延の後に画面遷移
-          setTimeout(() => {
-            window.location.href = targetUrl;
-          }, 300);
+          window.location.href = targetUrl;
         }
       };      const handleInspectionComplete = async () => {
         if (!propertyId) {
