--- a/room_select.html
+++ b/room_select.html
@@ -334,24 +334,42 @@
 
             {Array.isArray(rooms) && rooms.length > 0 && (
               <div className="mantine-stack">
-                {rooms.map(room => (
-                  <div key={room.id} className="mantine-paper">
-                    <button
-                      onClick={() => handleRoomSelect(room)}
-                      disabled={loading || isNavigating}
-                      className="room-card"
-                    >
-                      <div className="room-info">
-                        <div className="room-header">
-                          <span className="room-number">{room.name || room.roomName || '部屋名未設定'}</span>
+                {rooms.map(room => {
+                  // 🆕 部屋名の表示テキストを動的に生成
+                  const displayName = room.name || room.roomName || '部屋名未設定';
+                  
+                  return (
+                    <div key={room.id} className="mantine-paper">
+                      <button
+                        onClick={() => handleRoomSelect(room)}
+                        disabled={loading || isNavigating}
+                        className="room-card"
+                      >
+                        <div className="room-info">
+                          <div className="room-header">
+                            <span className="room-number">
+                              {displayName}
+                              {/* 🆕 検針日情報を「X月Y日」形式で表示 */}
+                              {room.hasInspectionData && room.inspectionDate && (
+                                <span style={{
+                                  color: 'var(--mantine-color-blue-6)',
+                                  fontWeight: '500',
+                                  fontSize: '0.9em',
+                                  marginLeft: '8px'
+                                }}>
+                                  [検針日：{room.inspectionDate}]
+                                </span>
+                              )}
+                            </span>
+                          </div>
                         </div>
-                      </div>
-                      <svg className="room-arrow" fill="currentColor" viewBox="0 0 20 20">
-                        <path fillRule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clipRule="evenodd" />
-                      </svg>
-                    </button>
-                  </div>
-                ))}
+                        <svg className="room-arrow" fill="currentColor" viewBox="0 0 20 20">
+                          <path fillRule="evenodd" d="M7.293 14.707a1 1 0 010-1.414L10.586 10 7.293 6.707a1 1 0 011.414-1.414l4 4a1 1 0 010 1.414l-4 4a1 1 0 01-1.414 0z" clipRule="evenodd" />
+                        </svg>
+                      </button>
+                    </div>
+                  );
+                })}
               </div>
             )}
           </div>
