--- a/meter_reading.html
+++ b/meter_reading.html
@@ -255,7 +255,9 @@
       );
 
       const formatDate = (dateValue) => {
-        if (!dateValue) return '';
+        if (!dateValue || dateValue === '' || dateValue === null || dateValue === undefined) {
+          return '未検針';
+        }
         
         try {
           let dateObj;
@@ -281,11 +283,11 @@
             const day = dateObj.getDate().toString().padStart(2, '0');
             return `${year}年${month}月${day}日`;
           } else {
-            return String(dateValue);
+            return '未検針';
           }
         } catch (e) {
           console.warn('[meter_reading] 日付のフォーマットに失敗しました:', dateValue, e);
-          return String(dateValue);
+          return '未検針';
         }
       };
 
@@ -562,7 +564,12 @@
                         return (
                           <tr key={index}>
                             <td data-label="検針日時">
-                              最終検針日: {formattedDate}
+                              <span style={{
+                                color: formattedDate === '未検針' ? 'var(--mantine-color-red-6)' : 'inherit',
+                                fontWeight: formattedDate === '未検針' ? 'bold' : 'normal'
+                              }}>
+                                最終検針日: {formattedDate}
+                              </span>
                             </td>
                             <td data-label="今回指示数(㎥)">
                               <input 
