--- a/meter_reading.html
+++ b/meter_reading.html
@@ -212,6 +212,15 @@
         window.location.href = 'room_select.html';
       };
 
+      // ローカル時間でYYYY-MM-DD形式の日付文字列を取得
+      const getLocalDateString = () => {
+        const now = new Date();
+        const year = now.getFullYear();
+        const month = String(now.getMonth() + 1).padStart(2, '0');
+        const day = String(now.getDate()).padStart(2, '0');
+        return `${year}-${month}-${day}`;
+      };
+
       // LoadingOverlayコンポーネント
       const LoadingOverlay = ({ message }) => (
         <div style={{
@@ -685,11 +694,11 @@
                             min="0"
                             step="any"
                             style={{fontSize: '1rem', padding: '10px'}}
-                            data-date={new Date().toISOString().split('T')[0]} 
+                            data-date={getLocalDateString()} 
                             data-original-value=""
                             data-previous-reading=""
                             onChange={(e) => {
-                              const dateForDataAttribute = new Date().toISOString().split('T')[0];
+                              const dateForDataAttribute = getLocalDateString();
                               const numericValue = parseFloat(e.target.value);
                               if (e.target.value === '') {
                                   setInputErrors(prev => ({...prev, [dateForDataAttribute]: '初回検針では指示数の入力が必須です。'}));
@@ -707,9 +716,9 @@
                               }
                             }}
                           />
-                          {inputErrors[new Date().toISOString().split('T')[0]] && (
+                          {inputErrors[getLocalDateString()] && (
                             <div style={{ color: 'var(--mantine-color-red-6)', fontSize: '0.9em', marginTop: '4px' }}>
-                              {inputErrors[new Date().toISOString().split('T')[0]]}
+                              {inputErrors[getLocalDateString()]}
                             </div>
                           )}
                         </div>
@@ -727,8 +736,8 @@
                             display: 'flex',
                             alignItems: 'center'
                           }}>
-                            {usageStates[new Date().toISOString().split('T')[0]] !== undefined 
-                              ? `${usageStates[new Date().toISOString().split('T')[0]]}${usageStates[new Date().toISOString().split('T')[0]] !== '-' ? '㎥' : ''}`
+                            {usageStates[getLocalDateString()] !== undefined 
+                              ? `${usageStates[getLocalDateString()]}${usageStates[getLocalDateString()] !== '-' ? '㎥' : ''}`
                               : '-'}
                           </div>
                           <div style={{ fontSize: '0.85em', color: 'var(--mantine-color-gray-6)', marginTop: '4px' }}>
