--- a/meter_reading.html
+++ b/meter_reading.html
@@ -678,7 +678,7 @@
                           <input 
                             type="text" 
                             id="initialReadingDate" 
-                            value={formatDate(new Date())} 
+                            value="未検針" 
                             readOnly 
                             className="mantine-input" 
                             style={{fontSize: '1rem', padding: '10px'}} 
@@ -694,11 +694,11 @@
                             min="0"
                             step="any"
                             style={{fontSize: '1rem', padding: '10px'}}
-                            data-date={getLocalDateString()} 
+                            data-date="" 
                             data-original-value=""
                             data-previous-reading=""
                             onChange={(e) => {
-                              const dateForDataAttribute = getLocalDateString();
+                              const dateForDataAttribute = "";
                               const numericValue = parseFloat(e.target.value);
                               if (e.target.value === '') {
                                   setInputErrors(prev => ({...prev, [dateForDataAttribute]: '初回検針では指示数の入力が必須です。'}));
@@ -716,9 +716,9 @@
                               }
                             }}
                           />
-                          {inputErrors[getLocalDateString()] && (
+                          {inputErrors[""] && (
                             <div style={{ color: 'var(--mantine-color-red-6)', fontSize: '0.9em', marginTop: '4px' }}>
-                              {inputErrors[getLocalDateString()]}
+                              {inputErrors[""]}
                             </div>
                           )}
                         </div>
@@ -736,8 +736,8 @@
                             display: 'flex',
                             alignItems: 'center'
                           }}>
-                            {usageStates[getLocalDateString()] !== undefined 
-                              ? `${usageStates[getLocalDateString()]}${usageStates[getLocalDateString()] !== '-' ? '㎥' : ''}`
+                            {usageStates[""] !== undefined 
+                              ? `${usageStates[""]}${usageStates[""] !== '-' ? '㎥' : ''}`
                               : '-'}
                           </div>
                           <div style={{ fontSize: '0.85em', color: 'var(--mantine-color-gray-6)', marginTop: '4px' }}>
